src/components/QueryResultTable/QueryResultTable.scss
@use '../../styles/mixins.scss';

.ydb-query-result-table {
    &__cell {
        width: 100%;
        @include mixins.cell-container;
    }

    &__cell-popup {
        max-width: 300px;
        padding: 10px;

        word-break: break-word;
    }

    &__cell-popup-json {
        overflow-x: auto;

        max-height: 300px;
        margin: 0;

        font-family: monospace;
        font-size: 12px;
        white-space: pre;
    }

    &__cell-popup-copy {
        display: flex;

        margin-top: 8px;
    }

    &__message {
        padding: 15px 10px;
    }

    // Must have fixed height for frequent data updates (to avoid interface shaking).
    // Will be fixed after migration to new @gravity-ui/table.
    &__table-wrapper {
        height: 0px;
    }
}

